--- a/custom_gym_app/views/gym_registration.xml
+++ b/custom_gym_app/views/gym_registration.xml
@@ -1,5 +1,23 @@
 <odoo>
     <data>
+        <record id="form_res_partner_inheritance" model="ir.ui.view">
+            <field name="name">res.partner.form.inheritance</field>
+            <field name="model">res.partner</field>
+            <field name="mode">primary</field>
+            <field name="inherit_id" ref="base.view_partner_form"/>
+            <field name="arch" type="xml">
+                <field name="website" position="attributes">
+                    <attribute name="string">Website.</attribute>
+                </field>
+
+                 <xpath expr="//notebook[@colspan='4']" position="before">
+                     <group>
+                         <field name="gym_type" widget="radio"/>
+                     </group>
+                 </xpath>
+            </field>
+        </record>
+
         <record id="search_res_partner_inheritance" model="ir.ui.view">
             <field name="model">res.partner</field>
             <field name="arch" type="xml">
@@ -31,12 +49,56 @@
         <record model="ir.actions.act_window" id="action_res_partner_inheritance">
             <field name="name">Membership</field>
             <field name="res_model">res.partner</field>
+            <field name="domain">[('category_id.name', '=', 'Gym'), ('gym_type', '!=', 'trainer')]</field>
             <field name="context">{'search_default_category_id': 1}</field>
+            <field name="view_mode">kanban,tree,form</field>
+            <field name="view_ids" eval="[(5, 0, 0), (0, 0, {'view_mode': 'kanban'}), (0, 0, {'view_mode': 'tree'}), (0, 0, {'view_mode': 'form', 'view_id': ref('custom_gym_app.form_res_partner_inheritance')})]"/>
+        </record>
+
+        <record model="ir.actions.act_window" id="action_res_user_inheritance">
+            <field name="name">Portal Management</field>
+            <field name="res_model">res.users</field>
+            <field name="domain">[('share', '=', True)]</field>
             <field name="view_mode">kanban,tree,form</field>
         </record>
 
+        <record model="ir.actions.act_window" id="action_subscription_inheritance">
+            <field name="name">Subscriptions</field>
+            <field name="res_model">sale.subscription</field>
+            <field name="view_mode">kanban,tree,form,pivot,graph,cohort,activity</field>
+        </record>
+
+        <record model="ir.actions.act_window" id="action_planning_slot_inheritance">
+            <field name="name">Planning</field>
+            <field name="res_model">planning.slot</field>
+            <field name="view_mode">gantt,tree,form,pivot</field>
+        </record>
+
         <menuitem name="Membership" id="menu_res_partner_inheritance" sequence="1"
-                  action="custom_gym_app.action_res_partner_inheritance"
                   web_icon="custom_gym_app,static/description/menu.jpg"/>
+
+        <menuitem name="Membership" id="menu_gym_membership" sequence="1"
+                  action="custom_gym_app.action_res_partner_inheritance"
+                  parent="custom_gym_app.menu_res_partner_inheritance"/>
+
+        <menuitem name="Subscriptions" id="menu_gym_subscription" sequence="2"
+                  action="custom_gym_app.action_subscription_inheritance"
+                  parent="custom_gym_app.menu_res_partner_inheritance"/>
+
+        <menuitem name="Planning" id="x_menu_gym_planning" sequence="3"
+                  action="custom_gym_app.action_planning_slot_inheritance"
+                  parent="custom_gym_app.menu_res_partner_inheritance"/>
+
+        <menuitem name="Invoices" id="menu_gym_invoices" sequence="4"
+                  action="account.action_move_out_invoice_type"
+                  parent="custom_gym_app.menu_res_partner_inheritance"/>
+
+        <menuitem name="Portal Management" id="menu_gym_portal_management" sequence="5"
+                  action="custom_gym_app.action_res_user_inheritance"
+                  parent="custom_gym_app.menu_res_partner_inheritance"/>
+
+        <menuitem name="Employees" id="menu_gym_planning" sequence="6"
+                  action="hr.open_view_employee_list_my"
+                  parent="custom_gym_app.menu_res_partner_inheritance"/>
     </data>
 </odoo>
