CUSTOM GYM APP CODE UPDATES (04:24 PM)

--- a/custom_gym_app/views/gym_registration.xml
+++ b/custom_gym_app/views/gym_registration.xml
@@ -6,8 +6,22 @@
             <field name="mode">primary</field>
             <field name="inherit_id" ref="base.view_partner_form"/>
             <field name="arch" type="xml">
+                <field name="company_type" position="replace"/>
+
+                <xpath expr="//span[@name='address_name']" position="replace">
+                     <span class="o_form_label o_td_label" name="address_name">
+                        <b>Member Address</b>
+                    </span>
+                </xpath>
+
+                <field name="vat" position="replace">
+                    <field name="national_id"/>
+                    <field name="birth_date"/>
+                    <field name="nationality"/>
+                </field>
+
                 <field name="website" position="attributes">
-                    <attribute name="string">Website.</attribute>
+                    <attribute name="string">Website Link</attribute>
                 </field>
 
                  <xpath expr="//notebook[@colspan='4']" position="before">
@@ -47,9 +61,18 @@
         </record>
 
         <record model="ir.actions.act_window" id="action_res_partner_inheritance">
-            <field name="name">Membership</field>
+            <field name="name">Members</field>
             <field name="res_model">res.partner</field>
             <field name="domain">[('category_id.name', '=', 'Gym'), ('gym_type', '!=', 'trainer')]</field>
+            <field name="context">{'search_default_category_id': 1}</field>
+            <field name="view_mode">kanban,tree,form</field>
+            <field name="view_ids" eval="[(5, 0, 0), (0, 0, {'view_mode': 'kanban'}), (0, 0, {'view_mode': 'tree'}), (0, 0, {'view_mode': 'form', 'view_id': ref('custom_gym_app.form_res_partner_inheritance')})]"/>
+        </record>
+
+        <record model="ir.actions.act_window" id="action_res_trainer_inheritance">
+            <field name="name">Trainers</field>
+            <field name="res_model">res.partner</field>
+            <field name="domain">[('category_id.name', '=', 'Gym'), ('gym_type', '=', 'trainer')]</field>
             <field name="context">{'search_default_category_id': 1}</field>
             <field name="view_mode">kanban,tree,form</field>
             <field name="view_ids" eval="[(5, 0, 0), (0, 0, {'view_mode': 'kanban'}), (0, 0, {'view_mode': 'tree'}), (0, 0, {'view_mode': 'form', 'view_id': ref('custom_gym_app.form_res_partner_inheritance')})]"/>
@@ -74,30 +97,34 @@
             <field name="view_mode">gantt,tree,form,pivot</field>
         </record>
 
-        <menuitem name="Membership" id="menu_res_partner_inheritance" sequence="1"
+        <menuitem name="Aqeeq Gym" id="menu_res_partner_inheritance" sequence="1"
                   web_icon="custom_gym_app,static/description/menu.jpg"/>
 
-        <menuitem name="Membership" id="menu_gym_membership" sequence="1"
+        <menuitem name="Members" id="menu_gym_membership" sequence="1"
                   action="custom_gym_app.action_res_partner_inheritance"
                   parent="custom_gym_app.menu_res_partner_inheritance"/>
 
-        <menuitem name="Subscriptions" id="menu_gym_subscription" sequence="2"
+        <menuitem name="Trainers" id="menu_gym_trainers" sequence="2"
+                  action="custom_gym_app.action_res_trainer_inheritance"
+                  parent="custom_gym_app.menu_res_partner_inheritance"/>
+
+        <menuitem name="Subscriptions" id="menu_gym_subscription" sequence="3"
                   action="custom_gym_app.action_subscription_inheritance"
                   parent="custom_gym_app.menu_res_partner_inheritance"/>
 
-        <menuitem name="Planning" id="x_menu_gym_planning" sequence="3"
+        <menuitem name="Planning" id="x_menu_gym_planning" sequence="4"
                   action="custom_gym_app.action_planning_slot_inheritance"
                   parent="custom_gym_app.menu_res_partner_inheritance"/>
 
-        <menuitem name="Invoices" id="menu_gym_invoices" sequence="4"
+        <menuitem name="Invoices" id="menu_gym_invoices" sequence="5"
                   action="account.action_move_out_invoice_type"
                   parent="custom_gym_app.menu_res_partner_inheritance"/>
 
-        <menuitem name="Portal Management" id="menu_gym_portal_management" sequence="5"
+        <menuitem name="Portal Management" id="menu_gym_portal_management" sequence="6"
                   action="custom_gym_app.action_res_user_inheritance"
                   parent="custom_gym_app.menu_res_partner_inheritance"/>
 
-        <menuitem name="Employees" id="menu_gym_planning" sequence="6"
+        <menuitem name="Employees" id="menu_gym_planning" sequence="7"
                   action="hr.open_view_employee_list_my"
                   parent="custom_gym_app.menu_res_partner_inheritance"/>
     </data>
