--- a/ow_portal/static/src/scss/style.scss
+++ b/ow_portal/static/src/scss/style.scss
@@ -34,7 +34,7 @@
 	}
 	
 	[href="/my/quotes"] {
-		background-color: theme-color('primary');
+		background-color: #993366;
 		color: #fff !important;
 	}
 
@@ -69,7 +69,7 @@
 	}
 
 	[href="/my/schedule"]{
-		background-color: #e69900;
+		background-color: #003366;
 		color: #fff !important;
 	}
 
@@ -79,7 +79,7 @@
 	}
 
 	[href="/my/subscription"]{
-		background-color: #00bfff;
+		background-color: #006600;
 		color: #fff !important;
 	}
 }
