CUSTOM GYM APP CODE UPDATES (06:25 PM)

--- a/ow_portal/static/src/scss/style.scss
+++ b/ow_portal/static/src/scss/style.scss
@@ -38,7 +38,17 @@
 		color: #fff !important;
 	}
 
+	[href="/ar/my/quotes"] {
+		background-color: #993366;
+		color: #fff !important;
+	}
+
 	[href="/my/orders"]{
+		background-color: #F06B4E;
+		color: #fff !important;
+	}
+
+	[href="/ar/my/orders"]{
 		background-color: #F06B4E;
 		color: #fff !important;
 	}
@@ -48,7 +58,17 @@
 		color: #fff !important;
 	}
 
+    	[href="/ar/my/purchase"]{
+		background-color: #548137;
+		color: #fff !important;
+	}
+
 	[href="/my/invoices"] {
+		background-color: #177979;
+		 color: #fff !important;
+	}
+
+	[href="/ar/my/invoices"] {
 		background-color: #177979;
 		 color: #fff !important;
 	}
@@ -58,7 +78,17 @@
 		color: #fff !important;
 	}
 
+	[href="/ar/my/projects"] {
+		background-color: #366C9F;
+		color: #fff !important;
+	}
+
 	[href="/my/tasks"] {
+		background-color: #0083FF;
+        color: #fff !important;
+	}
+
+	[href="/ar/my/tasks"] {
 		background-color: #0083FF;
         color: #fff !important;
 	}
@@ -68,7 +98,17 @@
 		color: #fff !important;
 	}
 
+	[href="/ar/my/timesheets"]{
+		background-color: #756494;
+		color: #fff !important;
+	}
+
 	[href="/my/schedule"]{
+		background-color: #003366;
+		color: #fff !important;
+	}
+
+	[href="/ar/my/schedule"]{
 		background-color: #003366;
 		color: #fff !important;
 	}
@@ -78,7 +118,17 @@
 		color: #fff !important;
 	}
 
+	[href="/ar/my/membership"]{
+		background-color: #ff6666;
+		color: #fff !important;
+	}
+
 	[href="/my/subscription"]{
+		background-color: #006600;
+		color: #fff !important;
+	}
+
+	[href="/ar/my/subscription"]{
 		background-color: #006600;
 		color: #fff !important;
 	}
