CUSTOM GYM APP CODE UPDATES (03:00 PM)

--- a/custom_gym_app/views/gym_registration.xml
+++ b/custom_gym_app/views/gym_registration.xml
@@ -101,6 +101,23 @@
             <field name="view_mode">gantt,tree,form,pivot</field>
         </record>
 
+        <record model="ir.actions.act_window" id="action_move_out_invoice_type_inheritance" >
+            <field name="name">Invoices</field>
+            <field name="res_model">account.move</field>
+            <field name="view_mode">tree,kanban,form</field>
+            <field name="view_id" ref="account.view_out_invoice_tree"/>
+            <field name="search_view_id" ref="account.view_account_invoice_filter"/>
+            <field name="domain">[('move_type', '=', 'out_invoice'), ('invoice_user_id', '=', uid)]</field>
+            <field name="context">{'default_move_type': 'out_invoice'}</field>
+            <field name="help" type="html">
+              <p class="o_view_nocontent_smiling_face">
+                Create a customer invoice
+              </p><p>
+                Create invoices, register payments and keep track of the discussions with your customers.
+              </p>
+            </field>
+        </record>
+
         <menuitem name="Aqeeq Gym" id="menu_res_partner_inheritance" sequence="1"
                   web_icon="custom_gym_app,static/description/menu.jpg"/>
 
@@ -120,9 +137,13 @@
                   action="custom_gym_app.action_planning_slot_inheritance"
                   parent="custom_gym_app.menu_res_partner_inheritance"/>
 
-        <menuitem name="Invoices" id="menu_gym_invoices" sequence="5"
+        <menuitem name="Invoices" id="menu_gym_invoices_manager" sequence="5"
                   action="account.action_move_out_invoice_type"
-                  parent="custom_gym_app.menu_res_partner_inheritance"/>
+                  parent="custom_gym_app.menu_res_partner_inheritance" groups="custom_gym_app.group_gym_manager"/>
+
+        <menuitem name="Invoices" id="menu_gym_invoices_trainer" sequence="5"
+                  action="custom_gym_app.action_move_out_invoice_type_inheritance"
+                  parent="custom_gym_app.menu_res_partner_inheritance" groups="custom_gym_app.group_gym_trainer"/>
 
         <menuitem name="Portal Management" id="menu_gym_portal_management" sequence="6"
                   action="custom_gym_app.action_res_user_inheritance"
@@ -130,6 +151,7 @@
 
         <menuitem name="Employees" id="menu_gym_planning" sequence="7"
                   action="hr.open_view_employee_list_my"
-                  parent="custom_gym_app.menu_res_partner_inheritance"/>
+                  parent="custom_gym_app.menu_res_partner_inheritance"
+                  groups="custom_gym_app.group_gym_manager"/>
     </data>
 </odoo>
