--- a/custom_gym_app/views/gym_registration.xml
+++ b/custom_gym_app/views/gym_registration.xml
@@ -22,6 +22,7 @@
                     <field name="national_id"/>
                     <field name="birth_date"/>
                     <field name="nationality"/>
+                    <field name="member_selection"/>
                 </field>
 
                 <field name="website" position="attributes">
