--- a/custom_gym_app/views/views.xml
+++ b/custom_gym_app/views/views.xml
@@ -1,6 +1,6 @@
 <odoo>
     <data>
-        <!--<record id="contacts.menu_contacts" model="ir.ui.menu">
+        <record id="contacts.menu_contacts" model="ir.ui.menu">
             <field name="groups_id" eval="[(6,0, [ref('group_gym_manager')])]"/>
         </record>
 
@@ -42,6 +42,6 @@
 
         <record id="base.menu_administration" model="ir.ui.menu">
             <field name="groups_id" eval="[(6,0, [ref('group_gym_manager')])]"/>
-        </record>-->
+        </record>
     </data>
 </odoo>
