CUSTOM GYM APP CODE UPDATES (11:45 PM)

--- a/custom_gym_app/reports/report_member_card.xml
+++ b/custom_gym_app/reports/report_member_card.xml
@@ -68,16 +68,12 @@
         <xpath expr="//div[@id='qrcode']" position="after">
             <div>
                 <hr/>
-                <p class="text-right">
+                <p class="text-right" style="text-align:right;">
                     :يرجى الالتزام بالتعليمات الآتية
                     <br/>
                     المبلغ المدفوع لا يكمن استرجاعه او استبدال الاشتراك بشخص آخر •
                     <br/>
-                    يمنع التصوير في ارجاء النادي وفي حال مخالفة ذلك يتم الغاء الاشتراك على الفور •
-                    <br/>
                     الحفاظ على ممتلكات النادي وفي حال مخالفة ذلك يتم الغاء الاشتراك على الفور •
-                    <br/>
-                    الالتزام بالزي الرياضي الشرعي وتجنب لبس الملابس التي تحتوي على (فتحة صدر – اظهار البطن – مافوق الركبة) •
                     <br/>
                     المحافظة على الذوق العام واظهار الاحترام لموظفات ومشتركات النادي •
                     <br/>
