--- a/custom_gym_app/reports/report_member_card.xml
+++ b/custom_gym_app/reports/report_member_card.xml
@@ -66,7 +66,8 @@
 
     <template id="report_invoice_document_inherit_gym" inherit_id="account.report_invoice_document">
         <xpath expr="//div[@id='qrcode']" position="after">
-            <div style="float:right;">
+            <div style="display:block;float:right;">
+                <hr/>
                 <p style="text-align:right;">
                     :يرجى الالتزام بالتعليمات الآتية
                     <br/>
