--- a/custom_gym_app/reports/report_member_card.xml
+++ b/custom_gym_app/reports/report_member_card.xml
@@ -65,7 +65,7 @@
     </template>
 
     <template id="report_invoice_document_inherit_gym" inherit_id="account.report_invoice_document">
-        <xpath expr="//div[@id='qrcode']" position="after">
+        <xpath expr="//div[@class='clearfix']" position="after">
             <div style="display:block;float:right;">
                 <hr/>
                 <p style="text-align:right;">
